deploy/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: kabanero
  labels:
    istio-injection: enabled
