deploy/config-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: config-frontend
  labels: 
    app: config
spec:
  ports:
  - port: 8080
    name: http
  selector:
    app: config
