deploy/demoservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: demoservice
spec:
  hosts:
  - "demo.local"
  gateways:
  - demoservice-gateway
  http:   
   - route:
      - destination: 
          host: demoservice
          subset: v1
          port:
            number: 8080
        weight: 50
      - destination: 
          host: demoservice
          subset: v2
          port:
            number: 8080
        weight: 50
