deploy/deploy.yaml

apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: demoservice-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: demoservice-destination 
spec:
  host: demoservice
  subsets:
  - name: v1
    labels:
      version: v1
  - name: v2
    labels:
      version: v2
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: demoservice
spec:
  hosts:
  - "*"
  gateways:
  - demoservice-gateway
  http:
  - match:  
    - uri:
        exact: /config 
    route:
    - destination:
        host: config
        port:
          number: 8080
  - match:  
    - uri:
        exact: /ui 
    route:
    - destination:
        host: config
        port:
          number: 8080
  - match:  
    - uri:
        regex: '/balance(.*)'
    route:
    - destination:
        host: config
        port:
          number: 8080
  - match:  
    - uri:
        exact: /terminate-v1
    route:
    - destination:
        host: demoservice 
        subset: v1
        port:
          number: 8080  
  - match:  
    - uri:
        exact: /terminate-v2
    route:
    - destination:
        host: demoservice 
        subset: v2
        port:
          number: 8080    
  - match:
    - headers:
        mc-user:
          exact: john
      uri:
        exact: "/headers" 
    route:
    - destination:
        host: demoservice 
        subset: v2
        port:
          number: 8080
  - match:  
    - uri:
        exact: /headers 
    route:
    - destination:
        host: demoservice 
        subset: v1
        port:
          number: 8080
  - match:  
    - uri:
        regex: '/(.*)' 
    route:
    - destination: 
        host: demoservice
        subset: v1
        port:
          number: 8080
      weight: 50
    - destination: 
        host: demoservice
        subset: v2
        port:
          number: 8080
      weight: 50
